After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685113 - avviddec: "ignored" audio decoders end up registered as video decoders
avviddec: "ignored" audio decoders end up registered as video decoders
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-libav
git master
Other Linux
: Normal normal
: 1.0.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-29 23:32 UTC by Alban Browaeys
Modified: 2012-09-30 15:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
only register "video" decoders (libav) as videodecoder (gt) (812 bytes, patch)
2012-09-29 23:32 UTC, Alban Browaeys
committed Details | Review

Description Alban Browaeys 2012-09-29 23:32:03 UTC
Created attachment 225402 [details] [review]
only register "video" decoders (libav) as videodecoder (gt)

avdec_mp2, avdec_vorbis, ... all the audio decoders blacklisted ends up registered as video decoders.
This patch adds the same check as in gstavdec.c (ie if decoder is audio) but for video type in gstavviddec.c.
Comment 1 Tim-Philipp Müller 2012-09-30 15:27:59 UTC
Pushed, thanks (same for video encoders, just in case):

commit 451a6c2ecf959639bca8a83371e3b0209789c015
Author: Tim-Philipp Müller <tim@centricular.net>
Date:   Sun Sep 30 16:25:29 2012 +0100

    avvidenc: also skip non-video encoders
    
    Doesn't actually make any difference at the moment, but
    seems the right thing to do.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=685113


commit f1071cc1b1a272d0e6b80f0121f3ca4261850ae4
Author: Alban Browaeys <prahal@yahoo.com>
Date:   Sun Sep 30 01:27:10 2012 +0200

    avviddec: exclude non-video decoders
    
    Otherwise audio decoders "ignored", ie blacklisted, end up
    registered by avviddec as video decoders.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=685113